dynamically generating html

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,12 @@
+# api key
 auth.json
+
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+
+# Local History for Visual Studio Code
+.history/
